[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Cutscene/WalkingPastPostersCutscene.gd" type="Script" id=1]
[ext_resource path="res://Art/Cutscene/DarkWall.png" type="Texture" id=2]
[ext_resource path="res://Art/Cutscene/UlimatePoster.png" type="Texture" id=3]
[ext_resource path="res://Art/Cutscene/FailTrainPoster.png" type="Texture" id=4]
[ext_resource path="res://Art/Cutscene/FailTeleportPoster.png" type="Texture" id=5]
[ext_resource path="res://Art/Cutscene/FlippedFailPoster.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Cutscene/LightSwing.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art/Cutscene/LaszloBodyShadow.png" type="Texture" id=8]
[ext_resource path="res://Art/Cutscene/LaszloHeadShadow.png" type="Texture" id=9]
[ext_resource path="res://Audio/RightFootStepSFX.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/LeftFootStepSFX.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]

resource_name = "Walk"
length = 1.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowLaszlo/LaszloBodyShadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 172.158, 421.159 ), Vector2( 172.158, 391.059 ), Vector2( 172.158, 421.159 ), Vector2( 172.158, 391.059 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowLaszlo/LaszloBodyShadow/LaszloHeadShadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1.1, 1.3, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 0.0, 5.99179, 0.0, -3.0, 0.0, 5.99179 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ShadowLaszlo/LaszloBodyShadow/LaszloHeadShadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.7, 1, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.93 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 0.93 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftFoot:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightFoot:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]

resource_name = "Move"
length = 15.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowLaszlo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 14.5, 15.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1028.81, 3.7948 ), Vector2( 273.371, 0 ), Vector2( 273.371, 0 ), Vector2( 1143.75, 4.20471 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Posters:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 14.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -3500, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "PanCamera"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -510, 345.512 ), Vector2( -889.8, 342.444 ), Vector2( 624.571, 345.589 ) ]
}

[node name="WalkingPastPostersCutscene" type="Position2D"]

script = ExtResource( 1 )

[node name="DarkWall" type="Sprite" parent="." index="0"]

position = Vector2( -1241.54, 963.041 )
scale = Vector2( 17.076, 16.1957 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Posters" type="Position2D" parent="." index="1"]

_sections_unfolded = [ "Transform" ]

[node name="UlimatePoster" type="Sprite" parent="Posters" index="0"]

position = Vector2( 419.568, 88.1911 )
rotation = 0.712777
texture = ExtResource( 3 )
offset = Vector2( 139.527, 178.929 )

[node name="FailTrainPoster" type="Sprite" parent="Posters" index="1"]

position = Vector2( 1947.08, 263.835 )
texture = ExtResource( 4 )

[node name="FailTeleportPoster" type="Sprite" parent="Posters" index="2"]

position = Vector2( 3261.5, 264.938 )
texture = ExtResource( 5 )

[node name="FlippedFailPoster" type="Sprite" parent="Posters" index="3"]

position = Vector2( 4299.4, 454.145 )
texture = ExtResource( 6 )

[node name="LabLight" parent="Posters" index="4" instance=ExtResource( 7 )]

position = Vector2( 138.248, -160.748 )

[node name="ShadowLaszlo" type="Position2D" parent="." index="2"]

position = Vector2( -1028.81, 3.7948 )
scale = Vector2( 1.6, 1.6 )
_sections_unfolded = [ "Transform" ]

[node name="LaszloBodyShadow" type="Sprite" parent="ShadowLaszlo" index="0"]

position = Vector2( 172.158, 421.159 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="LaszloHeadShadow" type="Sprite" parent="ShadowLaszlo/LaszloBodyShadow" index="0"]

position = Vector2( -19.6707, -119.38 )
rotation = 0.104576
scale = Vector2( 1, 0.965 )
texture = ExtResource( 9 )
offset = Vector2( 46.3367, -125.416 )
_sections_unfolded = [ "Transform" ]

[node name="WalkCycle" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Walk = SubResource( 1 )
blend_times = [  ]

[node name="MoveShadowAndPosters" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Move = SubResource( 2 )
anims/PanCamera = SubResource( 3 )
blend_times = [  ]

[node name="Camera2D" type="Camera2D" parent="." index="5"]

position = Vector2( -510, 345.512 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Timer2" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="RightFoot" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 10 )
volume_db = -24.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="LeftFoot" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 11 )
volume_db = -24.0
autoplay = false
mix_target = 0
bus = "Master"


